--- a/src/componts/React/From/Formtwo.css
+++ b/src/componts/React/From/Formtwo.css
@@ -18,6 +18,9 @@ input:invalid~ span{
 }
 .alin_item{
     display: flex;
-    justify-content: center;
-    
+    justify-content: center;   
+}
+
+.errormas{
+    color: red;
 }
